vicReg for tabular

--- a/saint_ai618.ipynb
+++ b/saint_ai618.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12ccc71b",
+   "id": "d51b4d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "751362ee",
+   "id": "ae459527",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13eac50a",
+   "id": "1ebe6908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,17 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "61748045",
+   "execution_count": 1,
+   "id": "54aac823",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LICENSE\t\t  data_openml.py  pipeline.png\t\t train.py\n",
-      "README.md\t  models\t  pretraining.py\t train_robust.py\n",
-      "augmentations.py  old_version\t  saint_environment.yml  utils.py\n"
+      "LICENSE\t\t  bestmodels\t  pipeline.png\t\t train.py\n",
+      "README.md\t  data_openml.py  pretraining.py\t train_robust.py\n",
+      "__pycache__\t  models\t  saint_ai618.ipynb\t utils.py\n",
+      "augmentations.py  old_version\t  saint_environment.yml\n"
      ]
     }
    ],
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ebef5f5",
+   "id": "44fddc0f",
    "metadata": {},
    "outputs": [
     {
@@ -126,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "be480e33",
+   "execution_count": 2,
+   "id": "122b7876",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.8/dist-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -150,8 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "921bd9bc",
+   "execution_count": 4,
+   "id": "b546a859",
    "metadata": {},
    "outputs": [
     {
@@ -161,25 +170,45 @@
       "Device is cuda:0.\n",
       "Downloading and processing the dataset, it might take some time.\n",
       "50 256\n",
-      "Namespace(active_log=False, attention_dropout=0.8, attention_heads=4, attentiontype='colrow', batchsize=256, cont_embeddings='MLP', dset_id=41150, dset_seed=5, dtask='clf', embedding_size=32, epochs=100, ff_dropout=0.8, final_mlp_style='sep', lam0=0.5, lam1=10, lam2=1, lam3=10, lr=0.0001, mask_prob=0, mixup_lam=0.3, nce_temp=0.7, optimizer='AdamW', pretrain=True, pretrain_epochs=50, pt_aug=[], pt_aug_lam=0.1, pt_projhead_style='diff', pt_tasks=['contrastive', 'denoising'], run_name='testrun', savemodelroot='./bestmodels', scheduler='cosine', set_seed=1, ssl_avail_y=0, task='binary', train_mask_prob=0, transformer_depth=1, vision_dset=False)\n",
+      "Namespace(active_log=False, attention_dropout=0.8, attention_heads=4, attentiontype='colrow', batchsize=256, cont_embeddings='MLP', cov_coeff=1, dset_id=41150, dset_seed=5, dtask='clf', embedding_size=32, epochs=100, ff_dropout=0.8, final_mlp_style='sep', lam0=0.5, lam1=0, lam2=0, lam3=25, lr=0.0001, mask_prob=0, mixup_lam=0.3, nce_temp=0.7, optimizer='AdamW', pretrain=True, pretrain_epochs=50, pt_aug=[], pt_aug_lam=0.1, pt_projhead_style='diff', pt_tasks=['contrastive', 'denoising'], run_name='testrun', savemodelroot='./bestmodels', scheduler='cosine', set_seed=1, ssl_avail_y=0, std_coeff=25, task='binary', train_mask_prob=0, transformer_depth=1, vision_dset=False)\n",
       "Pretraining begins!\n",
-      "Epoch: 0, Running Loss: 604.0518712326884\n",
-      "Epoch: 1, Running Loss: 166.91892969235778\n",
-      "Epoch: 2, Running Loss: 135.75879099499434\n",
-      "Epoch: 3, Running Loss: 153.53852261509746\n",
-      "Epoch: 4, Running Loss: 122.80139843188226\n",
+      "std loss 0.9829 cov loss 0.0000\n",
+      "std loss 0.9812 cov loss 0.0000\n",
+      "std loss 0.9788 cov loss 0.0000\n",
+      "std loss 0.9772 cov loss 0.0000\n",
+      "std loss 0.9753 cov loss 0.0000\n",
+      "std loss 0.9757 cov loss 0.0000\n",
+      "std loss 0.9738 cov loss 0.0000\n",
+      "std loss 0.9715 cov loss 0.0000\n",
+      "std loss 0.9720 cov loss 0.0000\n",
+      "std loss 0.9702 cov loss 0.0000\n",
+      "std loss 0.9684 cov loss 0.0000\n",
+      "std loss 0.9655 cov loss 0.0001\n",
+      "std loss 0.9616 cov loss 0.0002\n",
+      "std loss 0.9607 cov loss 0.0002\n",
+      "std loss 0.9616 cov loss 0.0001\n",
+      "std loss 0.9588 cov loss 0.0002\n",
+      "std loss 0.9563 cov loss 0.0003\n",
+      "std loss 0.9495 cov loss 0.0009\n",
+      "std loss 0.9479 cov loss 0.0011\n",
+      "std loss 0.9454 cov loss 0.0016\n",
+      "std loss 0.9383 cov loss 0.0034\n",
       "^C\n",
       "Traceback (most recent call last):\n",
-      "  File \"train.py\", line 158, in <module>\n",
+      "  File \"train.py\", line 163, in <module>\n",
       "    model = SAINT_pretrain(model, cat_idxs,X_train,y_train, continuous_mean_std, opt,device)\n",
-      "  File \"/root/saint/pretraining.py\", line 89, in SAINT_pretrain\n",
+      "  File \"/root/saint/pretraining.py\", line 117, in SAINT_pretrain\n",
       "    optimizer.step()\n",
       "  File \"/usr/local/lib/python3.8/dist-packages/torch/optim/optimizer.py\", line 140, in wrapper\n",
       "    out = func(*args, **kwargs)\n",
       "  File \"/usr/local/lib/python3.8/dist-packages/torch/autograd/grad_mode.py\", line 27, in decorate_context\n",
       "    return func(*args, **kwargs)\n",
-      "  File \"/usr/local/lib/python3.8/dist-packages/torch/optim/adamw.py\", line 133, in step\n",
-      "    if p.grad is None:\n",
+      "  File \"/usr/local/lib/python3.8/dist-packages/torch/optim/adamw.py\", line 162, in step\n",
+      "    adamw(params_with_grad,\n",
+      "  File \"/usr/local/lib/python3.8/dist-packages/torch/optim/adamw.py\", line 219, in adamw\n",
+      "    func(params,\n",
+      "  File \"/usr/local/lib/python3.8/dist-packages/torch/optim/adamw.py\", line 318, in _single_tensor_adamw\n",
+      "    param.addcdiv_(exp_avg, denom, value=-step_size)\n",
       "KeyboardInterrupt\n"
      ]
     }
@@ -191,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "566a1d77",
+   "id": "73e3333c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "087104b8",
+   "id": "2e6c920d",
    "metadata": {},
    "outputs": [],
    "source": []
